Optimize UI of dbmd.tools

--- a/app/static/css/miner.css
+++ b/app/static/css/miner.css
@@ -88,10 +88,8 @@ td.record-name {
     vertical-align: middle;
     text-align: center;
 }
-.rtype-selection {
-    width: 200px;
-}
-.units-selection {
+
+.record-uom {
     width: 75px;
 }
 
