--- a/app/templates/admin/tools/pdf_file_miner.html
+++ b/app/templates/admin/tools/pdf_file_miner.html
@@ -26,15 +26,17 @@
 {{ super() }}
     <div class="container container-full">
         <h3>Financial Data Miner - Summary</h3>
-        <p>Financial report for <strong><span class="timerange" id="report-timerange">{% if report.timerange %}{{report.timerange}}{% else %}(not identified){% endif %}</span></strong> months ended on <strong><span class="timestamp" id="report-timestamp">{% if report.timestamp %}{{report.timestamp.strftime('%Y-%m')}} {% else %}(not identified){% endif %}</span></strong> 
-        (<a href="#column-editor" data-toggle="modal" data-target="#column-editor">Edit <span class="glyphicon glyphicon-edit"></span></a>).</p>
-        <p>
+        <div>
+            <p>Financial report for <strong><span class="timerange" id="report-timerange">{% if report.timerange %}{{report.timerange}}{% else %}(not identified){% endif %}</span></strong> months ended on <strong><span class="timestamp" id="report-timestamp">{% if report.timestamp %}{{report.timestamp.strftime('%Y-%m')}} {% else %}(not identified){% endif %}</span></strong> 
+            (<a href="javascript:void(0);" class="time-editor-btn">Edit <span class="glyphicon glyphicon-edit"></span></a>).</p>
+        </div>
+        <div>
             <label>Company </label>
             <select id="company-select">
                 <option disabled selected value> -- select a company -- </option>
                 {% for comp in companies %}<option value="{{comp.id}}" {% if company and company.name == comp.name %}selected="selected"{% endif %}>{{comp.name}}</option>{% endfor %}
             </select>
-        </p>
+        </div>
 
         <div id="report-wrapper">
             <div id="report-ui">
@@ -162,7 +164,7 @@
                                     {% endif %}
                                     <th data-column-id="{{loop.index}}">
                                         <span class="timerange">{{timerange}}</span> months ended on <span class="timestamp">{{timestamp}}</span>
-                                        <a href="#" data-toggle="modal" data-target="#column-editor"><span class="glyphicon glyphicon-edit"></span></a>
+                                        <a href="javascript:void(0);" class="time-editor-btn"><span class="glyphicon glyphicon-edit"></span></a>
                                         <a href="javascript:void(0);" onclick="removeColumn('#bls-table', {{loop.index}});" <span class="glyphicon glyphicon-remove"></span></a>
                                     </th>
                                 {% endfor %}
@@ -188,8 +190,11 @@
                                             <span class="glyphicon glyphicon-arrow-up"></span>
                                         </button>   
                                     </td>
-                                    <td><select class="rtype-selection" data-init-text="{{record_name}}"></select></td>
-                                    <td><select class="units-selection" data-init-val="{{report.bls.uom}}"></select></td>
+                                    <td>
+                                        <span class="record-rtype">{{record_name}}</span>
+                                        <a href="javascript:void(0);" class="record-rtype-btn"><span class="glyphicon glyphicon-list"></span></a>
+                                    </td>
+                                    <td><select class="record-uom" data-init-val="{{report.bls.uom}}"></select></td>
                                     {% for value in values %}
                                         <td><input type="text" class="form-control input-sm" value="{{value}}"></td>
                                     {% endfor %}
@@ -223,7 +228,7 @@
                                     {% endif %}
                                     <th data-column-id="{{loop.index}}">
                                         <span class="timerange">{{timerange}}</span> months ended on <span class="timestamp">{{timestamp}}</span>
-                                        <a href="#" data-toggle="modal" data-target="#column-editor"><span class="glyphicon glyphicon-edit"></span></a>
+                                        <a href="javascript:void(0);" class="time-editor-btn"><span class="glyphicon glyphicon-edit"></span></a>
                                         <a href="javascript:void(0);" onclick="removeColumn('#ics-table', {{loop.index}});" <span class="glyphicon glyphicon-remove"></span></a>
                                     </th>
                                 {% endfor %}
@@ -249,8 +254,11 @@
                                             <span class="glyphicon glyphicon-arrow-up"></span>
                                         </button>   
                                     </td>
-                                    <td><select class="rtype-selection" data-init-text="{{record_name}}"></select></td>
-                                    <td><select class="units-selection" data-init-val="{{report.ics.uom}}"></select></td>
+                                    <td>
+                                        <span class="record-rtype">{{record_name}}</span>
+                                        <a href="javascript:void(0);" class="record-rtype-btn"><span class="glyphicon glyphicon-list"></span></a>
+                                    </td>
+                                    <td><select class="record-uom" data-init-val="{{report.ics.uom}}"></select></td>
                                     {% for value in values %}
                                         <td><input type="text" class="form-control input-sm" value="{{value}}"></td>
                                     {% endfor %}
@@ -309,8 +317,11 @@
                                             <span class="glyphicon glyphicon-arrow-up"></span>
                                         </button>   
                                     </td>
-                                    <td><select class="rtype-selection" data-init-text="{{record_name}}"></select></td>
-                                    <td><select class="units-selection" data-init-val="{{report.cfs.uom}}"></select></td>
+                                    <td>
+                                        <span class="record-rtype">{{record_name}}</span>
+                                        <a href="javascript:void(0);" class="record-rtype-btn"><span class="glyphicon glyphicon-list"></span></a>
+                                    </td>
+                                    <td><select class="record-uom" data-init-val="{{report.cfs.uom}}"></select></td>
                                     {% for value in values %}
                                         <td><input type="text" class="form-control input-sm" value="{{value}}"></td>
                                     {% endfor %}
@@ -329,8 +340,6 @@
         <div style="margin-top:30px"></div>
         {{ utils.render_export_form(url_for('dbmd_tools.upload_data')) }}
     </div>
-
-    {{ utils.modal_column_editor() }}
 {% endblock %}
 
 {% block body_scripts %}
@@ -342,16 +351,41 @@
 <script>
     var rtypes = {{ rtypes|tojson }};
 
-    $("select.rtype-selection").applySelect2({data: rtypes, text: "name"});
-    $("select.units-selection").bindUnitsOfMeasure();
+    $("select.record-uom").bindUnitsOfMeasure();
     $("#company-select").applySelect2();
     
-    $(".record-row").makeDraggable().makeDroppable();
+    // Remove comment if you want to make rows draggable.
+    // $(".record-row").makeDraggable().makeDroppable();
 
     $(document).on("click", ".record-remove-btn", function() {
         var $table = $(this).closest("table");
         $(this).closest("tr").remove();
         toggleTable($table);
+    });
+
+    $(document).on("click", ".record-rtype-btn", function() {
+        var $self = $(this);
+        var recordId = getIDforRType($self.closest("td").find(".record-rtype").text(), rtypes);
+        var dialog = createRTypeSelectionDialog({
+            data: rtypes, text: "name", 
+            initval: recordId,
+            callback: function(rtype) {
+                $self.closest("td").find(".record-rtype").text(rtype.text);
+                $self.closest("tr").attr("data-record-name", rtype.text);
+
+            }
+        });
+        dialog.open();
+    });
+
+    $(document).on("click", ".time-editor-btn", function() {
+        var $timerange = $(this).parent().find(".timerange");
+        var $timestamp = $(this).parent().find(".timestamp");
+        var dialog = createTimeSelectionDialog({
+            "timerange": $timerange,
+            "timestamp": $timestamp
+        });
+        dialog.open();
     });
 
     activateFocusOnInputs("#ics-table");
@@ -365,39 +399,6 @@
             $(this).removeClass("backgroundAnimated");
         }
     );
-
-    // Config bootstrap modal for updating column names
-    $("#column-editor").on("show.bs.modal", function(event) {
-        var $caller = $(event.relatedTarget); 
-        var $timerangeSpan = $caller.parent().find(".timerange");
-        var $timestampSpan = $caller.parent().find(".timestamp");
-
-        var modal = $(this);
-        var $timerangeInput = modal.find("#timerange-input");
-        var $timestampInput = modal.find("#timestamp-input");
-
-        // update inputs with current values
-        var timestamp = moment($timestampSpan.text(), "YYYY-MM");
-        if (timestamp != null && timestamp.isValid()) {
-            $timestampInput.val(timestamp.format("YYYY-MM"));
-        } else {
-            $timestampInput.val("");    
-        }
-        $timerangeInput.val($timerangeSpan.text());
-
-        // set callback for Ok button
-        var okButton = modal.find("#modal-ok-btn");
-        okButton.click(function(event) {
-            $timerangeSpan.text($timerangeInput.find(":selected").val());
-            if ($timestampInput.val() != "") {
-                $timestampSpan.text($timestampInput.val());
-            }
-            modal.modal("hide");
-            okButton.unbind("click");
-        });
-    });
-    // $("#timestamp-input").singleDatePicker({"parentEl": "#column-editor"});
-    $("#timestamp-input").bindDatePicker({orientation: "bottom"});
 
     $(document).on("change", ".record-row select", function() {
         var recordType = $(this).find("option:selected").text();
@@ -494,15 +495,17 @@
         }
     );
 
-    $("#export-data-form").submit(function(event) {
-        var data = createDataForExport(["#identified-records"]);
-        if (!submitExportForm(data, validateData)) {
-            event.preventDefault();
-            return false;
-        }
-        return true;
+    $(document).on("click", ".data-export-btn", function(event) {
+        var data = createDataForExport(["#bls-table", "#ics-table", "#cfs-table"], rtypes);
+        submitExportForm(data, validateData, function(result) {
+            if (result) {
+                $("#export-data-form").submit();
+            }
+        });
+        event.preventDefault();
+        return false;     
     });
-
+    
     function activateTab(tab){
         $('.nav-tabs a[href="#' + tab + '"]').tab('show');
     };
