--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -119,7 +119,7 @@
                             <div class="panel panel-primary">
                                 <div class="panel-heading">Financial Data Miner</div>
                                 <div class="panel-body">
-                                    <p>Extract financial data from given source.</p>
+                                    <p>Extract financial data from reports with help of our parser.</p>
                                     <a href="{{ url_for('dbmd_tools.miner_index') }}">Open</a>
                                 </div>
                             </div>
@@ -129,7 +129,7 @@
                                 <div class="panel-heading">Batch Uploader</div>
                                 <div class="panel-body">
                                     <p>Enable to upload financial data in convienent way.</p>
-                                    <a href="#">Open</a>
+                                    <a href="{{ url_for('dbmd_tools.batch_index') }}">Open</a>
                                 </div>
                             </div>
                         </div>
