--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -128,7 +128,7 @@
                             <div class="panel panel-primary">
                                 <div class="panel-heading">Batch Uploader</div>
                                 <div class="panel-body">
-                                    <p>Enable to upload financial data in convienent way.</p>
+                                    <p>Upload simultaneously data for many records concerning different periods.</p>
                                     <a href="{{ url_for('dbmd_tools.batch_index') }}">Open</a>
                                 </div>
                             </div>
